--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
-
-
+implementation 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
+    implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.3'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:21.0.0-rc1'
     // For control over item selection of both touch and mouse driven selection
